--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #haters
 node_modules
-
+options.json
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
